fixes page breaking on mobile for home

--- a/src/styles/pages/index.css
+++ b/src/styles/pages/index.css
@@ -42,7 +42,7 @@
 }
 
 .index .img {
-  max-width: 550px;
+  width: 550px;
   height: auto;
   align-self: center;
 }
